<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SpicE</string>

    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Closer Navigation drawer</string>

    //Strings da tela cadastro_itens.xml
    <string name="bt1">Mapa</string>
    <string name="hint1">Ex: 11/2022</string>
    <string name="hint2">email (opcional)</string>
    <string name="txv_1">Escolha o que você deseja cadastrar</string>
    <string name="txv_2">Informe abaixo a data da validade ou de fabricação do item</string>
    <string name="txv_3">Caso não nos fornecer outro email, usaremos a sua conta Google</string>
    <string name="txv_4">Agora adicione o local onde o item está</string>
    <string name="txv_5">Agora adicione o local onde o item está</string>
    //__________________________________________________________________

    <string name="com.twitter.sdk.android.CONSUMER_KEY" tools:ignore="ExtraTranslation">d93rz6W7aEIrXRH6AQCxj5SJH</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" tools:ignore="ExtraTranslation">MKhgddcFyP4piXzsrsPhtndFdvgofQyeFK5Vk9BfAUDW1VMWsb</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCAYZHrw8_gPd2TyoojlzKKAsfpMGhP6hk</string>

    <string name="msg_login">Entre com seu perfil google e cadastre valvulas, mangueiras de gás entre outros e avisaremos você quando a troca for necessária, fazendo isso nos ajuda a manter a comunidade mais segura!</string>

    <string name="validade">Validade</string>
    <string name="fabricacao">Fabricação</string>

    <string-array name="guias">

        <item>Acionando o CBMSC</item>
        <item>Afogamentos</item>
        <item>Animais Peçonhentos</item>
        <item>Cuidado com Crianças</item>
        <item>Cuidado com Idosos</item>
        <item>Elevadores</item>
        <item>Fogos de Artificio</item>
        <item>Inundações</item>
        <item>Instalações de Gás</item>
        <item>Prevenções a Incêndios</item>
        <item>Primeiros Socorros</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="equipamentos">

        <item>Válvula</item>
        <item>Mangueira</item>
        <item>Extintor</item>

    </string-array>

</resources>
